--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,6 +3,11 @@ body {
     font-family: 'Mali', cursive;
 }
 
+.centered-form a {
+    text-decoration: none;
+    font-size: 18px;    
+}
+
 .chat__sidebar {
     width: 100px;
     height: 100vh;
@@ -57,5 +62,20 @@ input {
 #location-message-template span {
     color: #999;
     margin: 5px 0px 0px 5px;
+}
+
+.centered-form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    width: 100vw;
+    padding: 10px;
+}
+
+.centered-form .centered-form__form {
+    background-color: #feca57;
+    padding: 15px;
+    border-radius: 20px;
 }
 
