--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,6 +3,10 @@ body {
     font-family: 'Changa', sans-serif;
 }
 
+.chat {
+    overflow-x: hidden;
+}
+
 .logo h1 {
     font-size: 30px;
     color: #833471;
@@ -16,6 +20,11 @@ body {
 
 h3 {
     margin-top: 40px;
+    margin-bottom: 20px;
+}
+
+.centered-form {
+    background-color: #ffffff;
 }
 
 .centered-form a {
@@ -45,6 +54,7 @@ h3 {
 .chat__messages {
     flex-grow: 1;
     overflow-y: scroll;
+    word-break: break-all;
     -webkit-overflow-scrolling: touch;
     list-style-type: none;
 }
@@ -95,7 +105,7 @@ input {
 .centered-form .centered-form__form {
     background-color: #feca57;
     padding: 15px;
-    border-radius: 20px;
+    border-radius: 10px;
     align-items: center;
     justify-content: center;
 }
@@ -111,6 +121,21 @@ input {
     text-decoration: none;
     list-style: none;
 }
+
+.use {
+    margin-top: 20px;
+    font-weight: bold;
+}
+
+.use span {
+    font-size: 28px;
+}
+
+.use p {
+    margin-bottom: 15px !important;
+    letter-spacing: 1px;
+}
+
 
 @media only screen and (max-width: 600px) {
     .chat__sidebar {
